Fix for very small screens to eliminate horizontal scrolling

--- a/styles/_blog.less
+++ b/styles/_blog.less
@@ -1,5 +1,6 @@
 body {
   background-color: @badgerWhite;
+  overflow-x: hidden;
 }
 
 main {
@@ -7,6 +8,7 @@ main {
   max-width: 335px;
   margin: 0 auto 50px auto;
   padding-top: 40px;
+  width: 90%;
 }
 
 article {
@@ -150,7 +152,6 @@ article {
 
   main {
     max-width: 1100px;
-    padding-top: 60px;
   }
 
   .blog-list {
